# smell

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  sheepit.toml
docs/: arch.md
fixtures/java/: Complexity.java
fixtures/kotlin/: complexity.kt
fixtures/rust/: complexity.rs
fixtures/swift/: complexity.swift
src/: cli.rs  code.rs  feature.rs  lib.rs  main.rs  testing.rs
src/cli/: analyze.rs  complexity.rs  router.rs
src/code/: collector.rs  java.rs  kotlin.rs  rust.rs  swift.rs
src/feature/: analyze.rs  complexity.rs
src/feature/complexity/: router.rs
