[package]
name = "smell"
description = "CLI tool for static code analysis."
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ncipollo/smell"
version = "0.1.0"

[dependencies]

[lints.clippy]
cognitive_complexity = "warn"
too_many_lines = "warn"
too_many_arguments = "warn"

[dev-dependencies]
