[package]
name = "smell"
description = "CLI tool for static code analysis."
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ncipollo/smell"
version = "0.1.0"

[dependencies]
clap = { version = "4.6.4", features = ["derive"] }
comfy-table = "7.2.2"
tree-sitter = "0.26.11"
tree-sitter-java = "0.23.5"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-rust = "0.24.2"
tree-sitter-swift = "0.7.3"

[lints.clippy]
cognitive_complexity = "warn"
too_many_lines = "warn"
too_many_arguments = "warn"

[dev-dependencies]
